@@ -18,6 +18,10 @@
 		<log4j.version>1.2.17</log4j.version>
 		<javax.servlet.version>3.0.1</javax.servlet.version>
 		<org.projectlombok.version>1.16.6</org.projectlombok.version>
+		<spring.data.version>1.6.0.RELEASE</spring.data.version>
+		<hibernate.version>4.0.1.Final</hibernate.version>
+		<h2.version>1.4.190</h2.version>
+		<bonecp.version>0.7.1.RELEASE</bonecp.version>
 	</properties>
 
 	<dependencies>
@@ -36,6 +40,28 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+
+		<!-- Persistence -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring.data.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>${hibernate.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.jolbox</groupId>
+			<artifactId>bonecp</artifactId>
+			<version>${bonecp.version}</version>
 		</dependency>
 
 		<dependency>
@@ -65,12 +91,20 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
