@@ -1,13 +1,23 @@
 package it.whitebox.event.config;
 
-import javax.annotation.Resource;
+import java.util.Properties;
 
+import javax.annotation.Resource;
+import javax.sql.DataSource;
+
+import org.apache.log4j.Logger;
+import org.hibernate.ejb.HibernatePersistence;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.ImportResource;
 import org.springframework.context.annotation.PropertySource;
 import org.springframework.core.env.Environment;
+import org.springframework.orm.jpa.JpaTransactionManager;
+import org.springframework.orm.jpa.LocalContainerEntityManagerFactoryBean;
 import org.springframework.web.servlet.config.annotation.EnableWebMvc;
+
+import com.jolbox.bonecp.BoneCPDataSource;
 
 /**
  * Main configuration, it replaces the xml file.
@@ -23,9 +33,67 @@ import org.springframework.web.servlet.config.annotation.EnableWebMvc;
 @PropertySource("classpath:ticket.properties")
 public class MainApplicationContext {
 	
+	private static final Logger log = Logger.getLogger(MainApplicationContext.class.getName());
+	
+    private static final String PROPERTY_NAME_DATABASE_DRIVER = "db.driver";
+    private static final String PROPERTY_NAME_DATABASE_PASSWORD = "db.password";
+    private static final String PROPERTY_NAME_DATABASE_URL = "db.url";
+    private static final String PROPERTY_NAME_DATABASE_USERNAME = "db.username";
  
+	/** used to create the DB schema: */
+    public static final String PROPERTY_NAME_HIBERNATE_CREATE_DB = "hibernate.createDb";
+    private static final String PROPERTY_NAME_HIBERNATE_DIALECT = "hibernate.dialect";
+    private static final String PROPERTY_NAME_HIBERNATE_FORMAT_SQL = "hibernate.format_sql";
+    private static final String PROPERTY_NAME_HIBERNATE_NAMING_STRATEGY = "hibernate.ejb.naming_strategy";
+    private static final String PROPERTY_NAME_HIBERNATE_SHOW_SQL = "hibernate.show_sql";
+    private static final String PROPERTY_NAME_HIBERNATE_HBMDDL_AUTO="hibernate.hbm2ddl.auto";
+    private static final String PROPERTY_NAME_ENTITYMANAGER_PACKAGES_TO_SCAN = "entitymanager.packages.to.scan";
+
     @Resource
     private Environment environment;
     
-
+    // --- Persistence configuration ---
+    @Bean
+    public DataSource dataSource() {
+        BoneCPDataSource dataSource = new BoneCPDataSource();
+ 
+        dataSource.setDriverClass(environment.getRequiredProperty(PROPERTY_NAME_DATABASE_DRIVER));
+        dataSource.setJdbcUrl(environment.getRequiredProperty(PROPERTY_NAME_DATABASE_URL));
+        dataSource.setUsername(environment.getRequiredProperty(PROPERTY_NAME_DATABASE_USERNAME));
+        dataSource.setPassword(environment.getRequiredProperty(PROPERTY_NAME_DATABASE_PASSWORD));
+ 
+        return dataSource;
+    }
+ 
+    @Bean
+    public JpaTransactionManager transactionManager() throws ClassNotFoundException {
+        JpaTransactionManager transactionManager = new JpaTransactionManager();
+ 
+        transactionManager.setEntityManagerFactory(entityManagerFactory().getObject());
+ 
+        return transactionManager;
+    }
+ 
+    @Bean
+    public LocalContainerEntityManagerFactoryBean entityManagerFactory() throws ClassNotFoundException {
+        LocalContainerEntityManagerFactoryBean entityManagerFactoryBean = new LocalContainerEntityManagerFactoryBean();
+ 
+        entityManagerFactoryBean.setDataSource(dataSource());
+        entityManagerFactoryBean.setPackagesToScan(environment.getRequiredProperty(PROPERTY_NAME_ENTITYMANAGER_PACKAGES_TO_SCAN));
+        entityManagerFactoryBean.setPersistenceProviderClass(HibernatePersistence.class);
+ 
+        Properties jpaProterties = new Properties();
+        jpaProterties.put(PROPERTY_NAME_HIBERNATE_DIALECT, environment.getRequiredProperty(PROPERTY_NAME_HIBERNATE_DIALECT));
+        jpaProterties.put(PROPERTY_NAME_HIBERNATE_FORMAT_SQL, environment.getRequiredProperty(PROPERTY_NAME_HIBERNATE_FORMAT_SQL));
+        jpaProterties.put(PROPERTY_NAME_HIBERNATE_NAMING_STRATEGY, environment.getRequiredProperty(PROPERTY_NAME_HIBERNATE_NAMING_STRATEGY));
+        jpaProterties.put(PROPERTY_NAME_HIBERNATE_SHOW_SQL, environment.getRequiredProperty(PROPERTY_NAME_HIBERNATE_SHOW_SQL));
+        if (environment.getRequiredProperty(PROPERTY_NAME_HIBERNATE_CREATE_DB).equals("true")) {
+        	log.warn("WARN: DB re-created: hibernate.hbm2ddl.auto=create");
+        	jpaProterties.put(PROPERTY_NAME_HIBERNATE_HBMDDL_AUTO, "create");
+        }
+ 
+        entityManagerFactoryBean.setJpaProperties(jpaProterties);
+ 
+        return entityManagerFactoryBean;
+    }
 }
