@@ -1,3 +1,0 @@
-#MessageSource
-message.source.basename=i18n/messages
-message.source.use.code.as.default.message=true
