@@ -12,7 +12,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%d{HH:mm:ss} [%8.8t] %-5p %C{1}:
 # LOGFILE is set to be a File appender using a PatternLayout.
 log4j.appender.LOGFILE=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.LOGFILE.DatePattern='.'dd-MM-yyyy
-log4j.appender.LOGFILE.File=logs/tickets.log
+log4j.appender.LOGFILE.File=logs/ticket.log
 log4j.appender.LOGFILE.Append=true
 log4j.appender.LOGFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.LOGFILE.layout.ConversionPattern=%d{dd/MMM HH:mm:ss} [%8.8t] %-5p %C{1}:%L %m%n
