@@ -1,0 +1,21 @@
+# --------------------------------
+# local properties
+# org.hibernate.dialect.H2Dialect database
+# --------------------------------
+
+#Database Configuration 
+db.driver=org.h2.Driver
+db.url=jdbc:h2:tcp://localhost:9092/test
+db.username=sa
+db.password=
+
+#Hibernate Configuration
+hibernate.createDb=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.format_sql=true
+hibernate.ejb.naming_strategy=it.whitebox.event.integration.db.TcktNamingStrategy
+hibernate.show_sql=false
+  
+#EntityManager
+#Declares the base package of the entity classes
+entitymanager.packages.to.scan=it.whitebox.event.business.domain
