@@ -1,13 +1,0 @@
-package it.whitebox.event;
-
-import org.junit.Test;
-
-//@RunWith(SpringJUnit4ClassRunner.class)
-//@SpringApplicationConfiguration(classes = TicketApplication.class)
-public class TicketApplicationTests {
-
-	@Test
-	public void contextLoads() {
-	}
-
-}
